@@ -2,6 +2,10 @@ ags (1.1.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented ags_synth_generator_compute_extended()
+	* implemented AgsSynthGenerator:delay property
+	* implemented needed properties of AgsApplySynth in order to use ags_synth_generator_compute_extended()
+	* refactored AgsApplySynth to use ags_synth_generator_compute_extended()
+	* TODO:JK: refactored AgsOscillator to have triple sync
 	* TODO:JK: implemented AgsPositionNotationCursor and AgsPositionAutomationCursor
 	* TODO:JK: fix and implement auto-scroll
 
